--- a/img/styles.css
+++ b/img/styles.css
@@ -10,6 +10,16 @@
   }
 
 
+  .container{
+    width: 1200px;
+  }
+
+
+  .header{
+    height: 68px;
+  }
+
+
   #welcome-info2{
     display: block;
   }
@@ -59,7 +69,7 @@ body {
   width: 80%;
   margin: 0 auto;
   padding: 20px;
-  background-color: #111111;
+  background-color: #111111 ;
 }
 
 #cards {
@@ -70,59 +80,7 @@ body {
   position: relative;
 }
 
-.card {
-  min-width: 200px;
-  height: 350px;
-  flex: 1 1 250px;
-  background-color: rgba(255, 255, 255, 0.12);
-  border-radius: 12px;
-  position: relative;
-  transition: background 0.3s;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  color: white;
-  font-size: 20px;
-  padding: 20px;
-}
 
-.card::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border-radius: 12px;
-  background: radial-gradient(
-      400px circle at var(--mouse-x, 50%) var(--mouse-y, 50%),
-      rgba(0, 150, 255, 0.5),
-      transparent
-  );
-  opacity: 0;
-  transition: opacity 0.3s;
-}
-
-.card:hover::before {
-  opacity: 1;
-}
-
-.card button {
-  width: 80%;
-  padding: 10px;
-  border: none;
-  border-radius: 8px;
-  background-color: #00aaff;
-  color: white;
-  font-size: 16px;
-  cursor: pointer;
-  transition: background 0.3s;
-}
-
-.card button:hover {
-  background-color: #0088cc;
-}
 header {
   right: 0;
   top: 0;
@@ -214,7 +172,7 @@ a:hover {
 }
 
 
-#welcome-text
+.welcome-text
 {
     
     top: 48px;
@@ -257,6 +215,7 @@ a:hover {
       rgba(255, 255, 255, 0)
   );
 }
+
 
 
 
