--- a/img/styles.css
+++ b/img/styles.css
@@ -1,54 +1,122 @@
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
-@media screen and (max-width: 1300px) {
-  #line2{
-    display: block;
-  }
 
-
-  #line1{
-    display: none;
-  }
-
-
-  .container{
-    width: 1200px;
-  }
-
-
-  .header{
-    height: 68px;
-  }
-
-
-  #welcome-info2{
-    display: block;
-  }
-
-
-  #welcome-info1{
-    display: none;
-  }
+.btn-yt
+{
+  background-color: #ff1414;
+  background-position: center;
+  background-size: 200px;
+  font-size: 35px;
+  font-weight: 600;
+  color: #fff;
+  font-family:"Montserrat";
+  text-decoration: none;
+  display: block;
+  text-align: center;
+  border-radius: 60px;
+  padding-top: 15px;
+  transition: all .25s linear;
+  padding-bottom: 15px;
+  margin-top: 45px;
+  margin-bottom: 45px;
 }
 
 
-@media screen and (min-width: 1301px) {
-  #line2{
-    display: none;
-
-  }
-
-
-  #welcome-info2{
-    display: none;
-  }
-
-  #welcome-text1{
-    display: block;
-  }
-  #line1{
-    display: block;
-  }
+.btn-yt:hover
+{
+  text-decoration: none;
+  color: rgba(255, 255, 255, 0.5);
 }
+
+
+.btn-nm
+{
+  background-color: #0e0e0e;
+  background-position: center;
+  background-size: 200px;
+  font-size: 35px;
+  font-weight: 600;
+  color: #fff;
+  font-family:"Montserrat";
+  text-decoration: none;
+  display: block;
+  text-align: center;
+  border-radius: 60px;
+  padding-top: 15px;
+  transition: all .25s linear;
+  padding-bottom: 15px;
+  margin-top: 45px;
+  margin-bottom: 45px;
+}
+
+
+.btn-nm:hover{
+  text-decoration: none;
+  color: rgba(255, 255, 255, 0.5);
+}
+
+
+.btn-ds
+{
+  background-color: #5865f2ff;
+  background-position: center;
+  background-size: 200px;
+  font-size: 35px;
+  font-weight: 600;
+  color: #fff;
+  font-family:"Montserrat";
+  text-decoration: none;
+  display: block;
+  text-align: center;
+  border-radius: 60px;
+  padding-top: 15px;
+  transition: all .25s linear;
+  padding-bottom: 15px;
+  margin-top: 45px;
+  margin-bottom: 45px;
+}
+
+ .btn-ds:hover{
+  text-decoration: none;
+  color: rgba(255, 255, 255, 0.5);
+}
+
+
+.btn-sf
+{
+  background-color: #1ed760ff;
+  background-position: center;
+  background-size: 200px;
+  font-size: 35px;
+  font-weight: 600;
+  color: #fff;
+  font-family:"Montserrat";
+  text-decoration: none;
+  display: block;
+  text-align: center;
+  border-radius: 60px;
+  padding-top: 15px;
+  transition: all .25s linear;
+  padding-bottom: 15px;
+  margin-top: 45px;
+  margin-bottom: 45px;
+}
+
+ .btn-sf:hover{
+  text-decoration: none;
+  color: rgba(255, 255, 255, 0.5);
+}
+
+
+
+
+#hi
+{
+  font-size: 72px;
+  font-family: "Montserrat";
+  font-weight: 600;
+  text-shadow: rgba(0, 0, 0, .6) 0px 0 20px;
+}
+
 
 
 .hello 
@@ -66,7 +134,7 @@ body {
 }
 
 .container {
-  width: 80%;
+  width: 560px;
   margin: 0 auto;
   padding: 20px;
   background-color: #111111 ;
@@ -106,71 +174,6 @@ header {
     text-decoration: none;
 }
 
-.btn-yt
-{
-  background-color: #ee1d1d;
-  background-position: center;
-  background-size: 200px;
-  font-size: 35px;
-  font-weight: 600;
-  color: #fff;
-  font-family:"Montserrat";
-  text-decoration: none;
-  display: block;
-  text-align: center;
-  border-radius: 60px;
-  padding-top: 15px;
-  transition: all .25s linear;
-  padding-bottom: 15px;
-  margin-top: 45px;
-  margin-bottom: 45px;
-}
-
-
-.btn-yt:hover
-{
-  text-decoration: none;
-  color: #f3a4a4;
-}
-
-.btn-nm
-{
-  background-color: #0e0e0e;
-  background-position: center;
-  background-size: 200px;
-  font-size: 35px;
-  font-weight: 600;
-  color: #fff;
-  font-family:"Montserrat";
-  text-decoration: none;
-  display: block;
-  text-align: center;
-  border-radius: 60px;
-  padding-top: 15px;
-  transition: all .25s linear;
-  padding-bottom: 15px;
-  margin-top: 45px;
-  margin-bottom: 45px;
-}
-
- .btn-nm:hover{
-  text-decoration: none;
-  color: #8d8d8d;
-}
-
- 
-
-a {
-  color: #22b9ff;
-  text-decoration: none;
-  transition: all .25s linear;
-}
-
-a:hover {
-  text-decoration: none;
-  color: #ee1d1d;
-}
-
 
 .welcome-text
 {
@@ -186,17 +189,6 @@ a:hover {
 }
 
 
-#hi
-{
-    font-size: 72px;
-    font-family: "Montserrat";
-    font-weight: 600;
-    text-shadow: rgba(0, 0, 0, .6) 0px 0 20px;
-}
-
-
-
-
 #line1
 {
     width: 4px;
@@ -206,8 +198,9 @@ a:hover {
 
 
 #line2 {
-  width: 320px;
+  width: 100%;
   height: 4px;
+  margin-bottom: 50px;
   background: linear-gradient(
       to right,
       rgba(255, 255, 255, 0),
@@ -231,8 +224,8 @@ a:hover {
 
 #welcome-info2
 {
-    font-size: 18px;
-    font-weight: 500;
+    font-size: 31px;
+    font-weight: 600;
     text-shadow: rgba(0, 0, 0, .4) 0px 0 20px;
     font-family: "Montserrat";
 }
@@ -243,6 +236,117 @@ a:hover {
   height: 4px;
   background: #cccccc00;
   
+}
+
+
+
+
+
+@media screen and (max-width: 1300px) {
+  #line2{
+    display: block;
+  }
+
+
+  #line1{
+    display: none;
+  }
+
+
+  .container{
+    width: 1300px;
+  }
+
+
+  .header{
+    height: 96px;
+  }
+
+
+  #welcome-info2{
+    display: block;
+  }
+
+
+  #welcome-info1{
+    display: none;
+  }
+
+
+  .btn-yt{
+    padding-bottom: 5px;
+    margin-top: 45px;
+    margin-bottom: 155px;
+    border-radius: 60px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    font-size: 55px;
+    font-weight: 550;
+  }
+
+
+  .btn-nm{
+    padding-bottom: 5px;
+    margin-top: 45px;
+    margin-bottom: 155px;
+    border-radius: 60px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    font-size: 55px;
+    font-weight: 550;
+  }
+
+
+  .btn-ds{
+    padding-bottom: 5px;
+    margin-top: 45px;
+    margin-bottom: 155px;
+    border-radius: 60px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    font-size: 55px;
+    font-weight: 550;
+  }
+
+
+  .btn-sf{
+    padding-bottom: 5px;
+    margin-top: 45px;
+    margin-bottom: 155px;
+    border-radius: 60px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    font-size: 55px;
+    font-weight: 550;
+  }
+
+
+  #hi{
+    font-size: 114px;
+    font-weight: 600;
+  }
+}
+
+
+@media screen and (min-width: 1301px) 
+{
+      #line2{
+        display: none;
+
+      }
+
+
+      #welcome-info2{
+        display: none;
+      }
+
+      #welcome-text1{
+        display: block;
+      }
+      #line1{
+        display: block;
+      }
+
 }
 
 
