--- a/img/styles.css
+++ b/img/styles.css
@@ -150,15 +150,19 @@ body {
 
 
 header {
+  position: fixed;
+  top: 0;
+  left: 0; 
   right: 0;
   top: 0;
   width: 100%;
-  background: #000;
+  background: rgba(0, 0, 0, 0.5);
   display: inline-block;
   height: 48px;
   align-items: center;
   font-family: "Montserrat";
   box-shadow: 0 0 16px rgba(0, 0, 0, .75);
+  backdrop-filter: blur(10px);
 }
 
 .navbar {
