--- a/img/styles.css
+++ b/img/styles.css
@@ -165,6 +165,11 @@ header {
   backdrop-filter: blur(10px);
 }
 
+
+.lologo{
+  width 96px;
+}
+
 .navbar {
   justify-content: space-between;
   display: flex;
@@ -264,6 +269,11 @@ header {
 
   .header{
     height: 96px;
+  }
+
+
+  .lologo{
+    width: 175px;
   }
 
 
